...
                    android:textAlignment="viewStart"
                    android:textColor="?colorOnPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/homeButton"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:cropToPadding="false"
                    android:foregroundGravity="clip_vertical"
                    app:srcCompat="@drawable/home_icon" />
...
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/workout_list_exercises_title"
                    android:textColor="?colorOnPrimary"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/openAddExerciseLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/openAddExerciseLayout"
                    android:layout_width="20dp"
...
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/addExerciseToWorkoutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
...
                    android:textAllCaps="false"
                    android:textColor="?colorOnPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/addExerciseWorkoutClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/none"
                    app:srcCompat="@drawable/ic_baseline_close_48" />

...
