...
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/list_exercises_title"
                    android:textColor="?colorOnPrimary"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/homeButton"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:cropToPadding="false"
                    android:foregroundGravity="clip_vertical"
...
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <ImageView
                        android:id="@+id/addExerciseButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/none"
                        android:foreground="?attr/selectableItemBackground"
                        app:srcCompat="@drawable/ic_baseline_add_48" />
                </androidx.cardview.widget.CardView>
...
                android:layout_marginTop="30dp"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/addExerciseCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:stateListAnimator="@null"
...
                    android:textAllCaps="false"
                    android:textColor="?colorOnPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/addExerciseClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/none"
                    app:srcCompat="@drawable/ic_baseline_close_48" />

...
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <EditText
                        android:id="@+id/kcalInputValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
...
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <EditText
                        android:id="@+id/expInputValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
...

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/exerciseMenuCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradient_1"
...
                    android:textAlignment="center"
                    android:textColor="?colorOnPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/closeExerciseMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/none"
                    android:foregroundGravity="center_vertical"
...
