...
        android:layout_height="wrap_content"
        android:layout_marginBottom="7.5dp"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView

            android:id="@+id/exerciseCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
...
