...
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textColor="?colorOnPrimary"
            android:textColorHint="?colorOnPrimary" />

        <EditText
            android:id="@+id/Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="15"
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/emailLoginButton"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="?colorPrimary"
...
