<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/welcometitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        android:fontFamily="@font/open_sans_bold"
        android:letterSpacing="0.2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?colorOnPrimary"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometitle3">

        <EditText
            android:id="@+id/EmailFieldSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxEms="15"
            android:minHeight="48dp"
            android:minEms="15" />

        <EditText
            android:id="@+id/Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="15"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxEms="15"
            android:minHeight="48dp"
            android:minEms="15" />

        <EditText
            android:id="@+id/Pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="15"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/repeat_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxEms="15"
            android:minHeight="48dp"
            android:minEms="15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/SignUpBtn"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:backgroundTint="?colorPrimary"
            android:elevation="0dp"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="53dp"
            android:stateListAnimator="@null"
            android:text="@string/signup_btn"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_signup"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@android:color/transparent"
            android:elevation="0dp"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="53dp"
            android:stateListAnimator="@null"
            android:text="@string/login_btn_back"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@null" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>